--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 
 [dependencies]
 rand = "0.8.5"
-serde = "1.0"
+serde = {version = "1.0", features = ["derive"]}
 serde_yaml = "0.8"
 serde_json = "1.0"
 handlebars = "4.3.1"
