--- a/logen.default.yaml
+++ b/logen.default.yaml
@@ -7,23 +7,36 @@ timestamp:
   begin: 2014-11-28T21:00:09+08:00
   end: 2014-11-28T22:00:09+08:00
 
-template: '{{timestamp}} [{{align_left "abc" }}] {{logger.name}} {{file}}/{{line}} {{method}} {{message}}'
+template: '{{timestamp}} {{to_uppercase "level" }} {{logger.name}} {{file}}/{{line}} {{method}} {{message}}'
 loggers:
 - name: req
   messages:
-  - template: 'request'
+  - template: 'request begin'
     file: req_handler.c
     line: 11
     method: main
+    level: info
+  - template: 'request end'
+    file: req_handler.c
+    line: 71
+    method: main
+    level: warn
 - name: resp
   messages:
-  - template: 'response'
+  - template: 'response begin'
     file: req_handler.c
     line: 18
     method: main
+    level: error
+  - template: 'response end'
+    file: req_handler.c
+    line: 88
+    method: main
+    level: debug
 - name: session
   messages:
-  - template: 'session'
+  - template: 'session created'
     file: session_handler.c
     line: 25
     method: main
+    level: trace
