--- a/logen.default.yaml
+++ b/logen.default.yaml
@@ -7,35 +7,35 @@ timestamp:
   begin: 2014-11-28T21:00:09+08:00
   end: 2014-11-28T22:00:09+08:00
 
-template: '{{timestamp}} <{{level | upper | align_left(width=5)}}> {{logger.name}} {{file}}/{{line}} {{method}} {{message}}'
+template: '{{timestamp}} <{{level | upper | align_left(width=5)}}> {{logger.name}} {{file}}/{{line}} {{method}} - {{message}}'
 loggers:
 - name: req
   messages:
-  - template: 'request begin'
+  - template: request begin
     file: req_handler.c
     line: 11
     method: main
     level: info
-  - template: 'request end'
+  - template: request end
     file: req_handler.c
     line: 71
     method: main
     level: warn
 - name: resp
   messages:
-  - template: 'response begin'
+  - template: response begin
     file: req_handler.c
     line: 18
     method: main
     level: error
-  - template: 'response end'
+  - template: response end
     file: req_handler.c
     line: 88
     method: main
     level: debug
 - name: session
   messages:
-  - template: 'session created'
+  - template: session created
     file: session_handler.c
     line: 25
     method: main
