--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 chrono = { version = "0.4", features = ["serde"] }
+lazy_static = "1.4.0"
 rand = "0.8.5"
 serde = {version = "1.0", features = ["derive"]}
 serde_yaml = "0.8"
