--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ chrono = { version = "0.4.19", features = ["serde"] }
 lazy_static = "1.4.0"
 anyhow = "1.0.58"
 rand = "0.8.5"
+rust-embed="6.4.0"
 serde = {version = "1.0.137", features = ["derive"]}
 serde_yaml = "0.8.24"
 serde_json = "1.0.81"
