--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,12 @@ edition = "2021"
 #[profile.release]
 #panic = "unwind"
 
+[source.crates-io]
+replace-with = "vendored-sources"
+
+[source.vendored-sources]
+directory = "vendor"
+
 [dependencies]
 clap = { version = "3.2.5", features = ["derive", "cargo", "env", "regex", "unicode", "wrap_help"] }
 chrono = { version = "0.4.19", features = ["serde"] }
