--- a/assets/logen.config.example.yaml
+++ b/assets/logen.config.example.yaml
@@ -1,12 +1,12 @@
 name: nginx
 formatter:
   flat:
+    timestamp_format: "%Y-%m-%d %H:%M:%S"
     template: '{{timestamp}} <{{level | upper | align_left(width=5)}}> {{logger.name}} {{file}}/{{line}} {{method}} - {{message}}'
   #json:
   #  style: bunyan
 num_of_lines: 10
 timestamp:
-  format: "%Y-%m-%d %H:%M:%S"
   begin: 2014-11-28T21:00:09+08:00
   end: 2014-11-28T22:00:09+08:00
 
