--- a/assets/logen.config.example.yaml
+++ b/assets/logen.config.example.yaml
@@ -10,7 +10,7 @@ timestamp:
   begin: 2014-11-28T21:00:09+08:00
   end: 2014-11-28T22:00:09+08:00
 
-loggers:
+logger:
 - name: req
   message:
   - template: request begin
