--- a/assets/logen.config.example.yaml
+++ b/assets/logen.config.example.yaml
@@ -2,14 +2,19 @@ name: nginx
 formatter:
   flat:
     timestamp_format: "%Y-%m-%d %H:%M:%S"
-    template: '{{timestamp}} <{{level | upper | align_left(width=5)}}> {{logger.name}} {{file}}/{{line}} {{method}} - {{message}}'
+    template: '{{timestamp}} <{{level | upper | align_left(width=5)}}> {{logger}} {{file}}/{{line}} {{method}} - {{message}}'
   #json:
   #  style: bunyan
 num_of_lines: 10
 timestamp:
   begin: 2014-11-28T21:00:09+08:00
   end: 2014-11-28T22:00:09+08:00
-
+host:
+- app1
+- app2
+- app3
+- lb1
+- lb2
 logger:
 - name: req
   message:
