--- a/assets/logen.config.example.yaml
+++ b/assets/logen.config.example.yaml
@@ -6,9 +6,8 @@ formatter:
   json:
     style: bunyan
 num_of_lines: 10
-timestamp:
-  begin: 2014-11-28T21:00:09+08:00
-  end: 2014-11-28T22:00:09+08:00
+begin_time: 2014-11-28T21:00:09+08:00
+end_time: 2014-11-28T22:00:09+08:00
 host:
 - app1
 - app2
