--- a/assets/example.yaml
+++ b/assets/example.yaml
@@ -47,8 +47,9 @@ apps:
   service:
     type: simple
     output:
-      json:
-        style: bunyan
+      format:
+        json:
+          style: bunyan
     num_of_lines: 10
     begin_time: 2014-11-28T21:00:09+08:00
     end_time: 2014-11-28T22:00:09+08:00
