--- a/assets/example.yaml
+++ b/assets/example.yaml
@@ -50,6 +50,9 @@ apps:
       format:
         json:
           style: bunyan
+      appenders:
+        - file:
+            path: service.log
     num_of_lines: 10
     begin_time: 2014-11-28T21:00:09+08:00
     end_time: 2014-11-28T22:00:09+08:00
