--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,6 @@ serde = {version = "1.0.137", features = ["derive"]}
 serde_yaml = "0.8.24"
 serde_json = "1.0.81"
 tera = "1.16.0"
-#thiserror = "1.0.31"
+thiserror = "1.0.31"
 typetag = "0.2.1"
 #serde_path_to_error = "0.1.7"
