--- a/playground/elk/.env
+++ b/playground/elk/.env
@@ -1,9 +1,9 @@
 
 # Password for the 'elastic' user (at least 6 characters)
-ELASTIC_PASSWORD=123456
+ELASTIC_PASSWORD=abcdef
 
 # Password for the 'kibana_system' user (at least 6 characters)
-KIBANA_PASSWORD=123456
+KIBANA_PASSWORD=abcdef
 
 # Version of Elastic products
 STACK_VERSION=8.3.2
