--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ replace-with = "vendored-sources"
 directory = "vendor"
 
 [dependencies]
+crc = "3.0.0"
 clap = { version = "3.2.5", features = ["derive", "cargo", "env", "regex", "unicode", "wrap_help"] }
 chrono = { version = "0.4.19", features = ["serde"] }
 lazy_static = "1.4.0"
